--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,6 +5,7 @@ body {
 
 #main_container {
     position: absolute;
+    display: flex;
     left: 0;
     right: 0;
     margin-left: auto;
@@ -16,17 +17,48 @@ body {
 }
 
 #nav {
-    position: absolute ;
+    width: 100%;
+    height: 150px;
+    margin-left: 344px;
+    border-bottom: 2px solid black;
+    background-color: aqua;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    }
 
-    margin-left: 333px;
-    margin-right: 0;
-    width: 668px;
-    height: 114px;
-    background-color: rgb(255, 252, 252);
-    border: solid 1px wheat;
+.border_between_class {
+    display: flex;
+    align-self: center;
+    width: 100%;
+
 }
 
-.border_between_navs {
-list-style-type: none;
-border: solid 2px black;
+#logoplacement {
+    position: absolute;
+    display: flex;
+    left: 0;
+    right: 0;
+    top: 0;
+    margin-left: auto;
+    margin-right: 657px;
+    border-right: 3px solid black;
+    
+}
+
+ul {
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    width: 80%;
+}
+
+#homenav {
+position: absolute;
+justify-content: space-between;
+background-color: transparent ;
+border: 1px solid black;
+height: 100px;
+width: 100px;
+left: 100;
 }
