--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,5 @@
  @import url('https://fonts.googleapis.com/css2?family=PT+Serif&display=swap');
- 
+ /* font-family: 'PT Serif', serif; */
 
 body {
     margin: 0px;
@@ -37,7 +37,7 @@ body {
     display: flex;
     align-self: center;
     width: 100%;
-
+    height: 127%;
 }
 
 li {
@@ -46,6 +46,7 @@ li {
     justify-content: center;
     align-items: center;
     height: 50px;
+    font-size: 30px;
 }
 /* End of Navigation */
 
@@ -95,7 +96,41 @@ border: 1px solid rgb(0, 0, 0);
 }
 /* End of CSS for "about-me" section */
 
+#My-Works {
+    position: absolute;
+    display: flex;
+    height: 300px;
+    width: 300px;
+    left: 55px;
+    top: 730px;
+    background-color: rgb(154, 205, 201);
+    border: 1px solid rgb(0, 0, 0);
+}
 
+
+
+#Actual-spaces-for-works {
+    position: absolute;
+    display: flex;
+    top: 730px;
+    left: 420px;
+    height: 300px;
+    width: 50%;
+    background-color: blanchedalmond;
+}
+
+#Works-main-text {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    width: 250px;
+    height: 150px;
+    left: 25px;
+    top: 75px;
+    background-color: transparent;
+    font-size: 25px;
+    
+}
 
 ul {
     list-style-type: none;
